--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,22 +1,117 @@
 body {
     font-family: Arial, sans-serif;
 }
+
+.preloader {
+    /*фиксированное позиционирование*/
+    position: fixed;
+    /* координаты положения */
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    /* фоновый цвет элемента */
+    background: #e0e0e0;
+    /* размещаем блок над всеми элементами на странице (это значение должно быть больше, чем у любого другого позиционированного элемента на странице) */
+    z-index: 1001;
+}
+
+.preloader__row {
+    position: relative;
+    top: 50%;
+    left: 50%;
+    width: 70px;
+    height: 70px;
+    margin-top: -35px;
+    margin-left: -35px;
+    text-align: center;
+    animation: preloader-rotate 2s infinite linear;
+}
+
+.preloader__item {
+    position: absolute;
+    display: inline-block;
+    top: 0;
+    background-color: #337ab7;
+    border-radius: 100%;
+    width: 35px;
+    height: 35px;
+    animation: preloader-bounce 2s infinite ease-in-out;
+}
+
+.preloader__item:last-child {
+    top: auto;
+    bottom: 0;
+    animation-delay: -1s;
+}
+
+@keyframes preloader-rotate {
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes preloader-bounce {
+
+    0%,
+    100% {
+        transform: scale(0);
+    }
+
+    50% {
+        transform: scale(1);
+    }
+}
+
+.loaded_hiding .preloader {
+    transition: 0.3s opacity;
+    opacity: 0;
+}
+
+.loaded .preloader {
+    display: none;
+}
+
 nav {
     width: 100%;
     height: 60px;
     background: #344051;
+    position: fixed;
+    z-index: 1000;
 }
+
+main {
+    width: 100%;
+    height: 100%;
+    display: block;
+}
+
 .logo {
     color: #fff;
     font-size: 28px;
     line-height: 60px;
-    padding-left:  388px;
+    padding-left: 388px;
     float: left;
+    -webkit-animation: comming 2s ease;
+    -o-animation: comming 2s ease;
+    animation: comming 2s ease;
 }
+
+@keyframes comming {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
+    }
+}
+
 .menu {
     float: left;
     padding-left: 432px;
 }
+
 .menu li {
     float: left;
     color: #fff;
@@ -24,27 +119,94 @@ nav {
     margin-right: 40px;
     font-size: 16px;
     text-transform: uppercase;
+    -webkit-animation: topshift 0.4s ease forwards;
+    -o-animation: topshift 0.4s ease forwards;
+    animation: topshift 0.4s ease forwards;
+    opacity: 0;
 }
+
+.menu li a {
+    transition: all 0.2s;
+    color: #fff;
+    transform: scale(1);
+    display: inline-block;
+}
+
+.menu li a:visited {
+    color: #fff;
+}
+
+.menu li a:hover {
+    color: #e88604;
+}
+
+.menu li a:active {
+    transform: scale(1.1);
+}
+
+@keyframes topshift {
+    0% {
+        opacity: 0;
+        margin-top: -80px;
+    }
+
+    100% {
+        opacity: 1;
+        margin-top: 0px;
+    }
+}
+
+.menu li:nth-child(2) {
+    animation-delay: 0.2s;
+}
+
+.menu li:nth-child(3) {
+    animation-delay: 0.4s;
+}
+
+.menu li:nth-child(4) {
+    animation-delay: 0.6s;
+}
+
+.menu li:nth-child(5) {
+    animation-delay: 0.8s;
+}
+
+.menu li:nth-child(6) {
+    animation-delay: 1s;
+}
+
 .main {
     width: 100%;
     height: 100%;
     background: url(../img/boy.png) 90% 100%/auto 90% no-repeat, url(../img/bg.jpg) center/cover no-repeat;
 }
+
 .title_container {
     margin: 432px 0 0 404px;
     float: left;
     color: #2c384a;
     text-align: center;
+    opacity: 0;
+    -webkit-animation: titlemove 1s ease forwards;
+    -o-animation: titlemove 1s ease forwards;
+    animation: titlemove 1s ease forwards;
+    -webkit-animation-delay: 1.2s;
+    -o-animation-delay: 1.2s;
+    animation-delay: 1.2s;
 }
+
 .title_container h1 {
     font-size: 60px;
     font-weight: bold;
 }
+
 .title_container h4 {
     margin-top: 40px;
     font-size: 22px;
     color: #79818d;
 }
+
 .title_container input {
     height: 40px;
     text-align: center;
@@ -56,14 +218,42 @@ nav {
     padding: 0 16px;
     margin: 58px 14px;
 }
+
+.title_container input {
+    transition: all 0.2s;
+}
+
+.title_container input:hover {
+    background: #344051;
+    color: #fff;
+    transform: scale(1);
+}
+
+.title_container input:active {
+    transform: scale(1.1);
+}
+
+@keyframes titlemove {
+    0% {
+        opacity: 0;
+        margin-left: -500px;
+    }
+
+    100% {
+        opacity: 1;
+        margin-left: 404px;
+    }
+}
+
 .about_me h2 {
-    font-size: 20px;
+    font-size: 24px;
     text-transform: uppercase;
     text-align: center;
     color: #263244;
     margin: 109px 0 31px 0;
-
+    font-weight: bold;
 }
+
 .avatar {
     margin: 0 0 25px 45%;
     border-radius: 50%;
@@ -73,7 +263,14 @@ nav {
     background-size: cover;
     background-attachment: scroll;
     filter: grayscale(100%);
+    transition: all 0.5s;
 }
+
+.avatar:hover {
+    filter: grayscale(0);
+    transform: scale(1.1);
+}
+
 .info {
     margin: 0 0 38px 600px;
     width: 730px;
@@ -81,6 +278,7 @@ nav {
     font-family: Calibri, sans-serif;
     font-size: 16px;
 }
+
 .download {
     margin: 0 0 96px 870px;
     background: url(../img/icon_download.jpg) 13px/auto no-repeat;
@@ -91,14 +289,25 @@ nav {
     height: 34px;
     line-height: 30px;
     text-align: center;
+    transition: all 0.2s;
 }
+
 .download a {
     color: #6f707e;
 }
+
+.download:hover {
+    transform: scale(1);
+}
+
+.download:active {
+    transform: scale(1.1);
+}
+
 .section_1 {
     background: url(../img/fon_1.jpg) no-repeat;
-
 }
+
 .section_1 h2 {
     font-size: 24px;
     text-transform: uppercase;
@@ -107,11 +316,13 @@ nav {
     padding: 105px 0 28px 0;
     font-weight: bold;
 }
+
 .cherta_zagalovka {
     margin: 0 auto 0 auto;
     display: block;
     padding: 0 0 103px 0;
 }
+
 .web {
     display: inline-block;
     margin: 0 82px 92px 417px;
@@ -120,6 +331,12 @@ nav {
     color: #3f495a;
     font-size: 14px;
 }
+
+.web img:hover {
+    transform: scale(1.2);
+    transition: all 0.3s;
+}
+
 .develop {
     display: inline-block;
     margin: 0 82px 92px 0;
@@ -128,6 +345,12 @@ nav {
     color: #3f495a;
     font-size: 14px;
 }
+
+.develop img:hover {
+    transform: scale(1.2);
+    transition: all 0.3s;
+}
+
 .ceo {
     display: inline-block;
     margin: 0 82px 92px 0;
@@ -136,6 +359,12 @@ nav {
     color: #3f495a;
     font-size: 14px;
 }
+
+.ceo img:hover {
+    transform: scale(1.2);
+    transition: all 0.3s;
+}
+
 .market {
     display: inline-block;
     margin: 0 82px 92px 0;
@@ -144,12 +373,19 @@ nav {
     color: #3f495a;
     font-size: 14px;
 }
+
+.market img:hover {
+    transform: scale(1.2);
+    transition: all 0.3s;
+}
+
 .chapter_section_1 {
     color: #cf7600;
     font-size: 14px;
     margin: 35px 0 17px 0;
     font-weight: 600;
 }
+
 .section_2 h2 {
     font-size: 24px;
     text-transform: uppercase;
@@ -162,21 +398,26 @@ nav {
 .section_2 .cherta_zagalovka {
     padding: 0 0 37px 0;
 }
+
 .section_2 .info {
     width: 800px;
     margin-bottom: 42px
 }
+
 .screenshot {
     margin-left: 388px;
     height: 590px;
 }
-.website1{
+
+.website1 {
     display: inline-block;
 }
+
 .website2 {
     display: inline-block;
-    margin-left:  105px;
+    margin-left: 105px;
 }
+
 .client {
     margin-left: 388px;
     margin-bottom: 14px;
@@ -184,26 +425,29 @@ nav {
     text-transform: uppercase;
     color: #263244;
     font-weight: bold;
-
 }
+
 .company {
     margin-left: 388px;
     margin-bottom: 14px;
     font-size: 12px;
     color: #3f495a;
 }
+
 .name-project {
     font-size: 18px;
     color: #263244;
     font-weight: bold;
     padding-bottom: 12px;
 }
+
 .about-project {
     width: 850px;
     color: #3f495a;
     font-size: 16px;
     line-height: 25px;
 }
+
 .website form {
     margin-left: 388px;
     border-radius: 5px;
@@ -214,6 +458,7 @@ nav {
     text-transform: uppercase;
     background: #63b5ae;
 }
+
 .website button {
     text-transform: uppercase;
     background: #63b5ae;
@@ -224,6 +469,22 @@ nav {
     height: 46px;
     border-radius: 5px;
 }
+
+
+/*вверху какой-то border лишний как будто*/
+
+.website button:hover {
+    transition: all 0.4s;
+    background: #fff;
+    color: #63b5ae;
+    transform: scale(1);
+    border: 1.5px solid #63b5ae;
+}
+
+.website button:active {
+    transform: scale(1.1);
+}
+
 .section_3 h2 {
     margin: 200px auto 57px auto;
     font-size: 24px;
@@ -232,14 +493,15 @@ nav {
     color: #263244;
     font-weight: bold;
 }
+
 .calculation {
     margin: 0 0 20px 600px;
     text-transform: uppercase;
     color: #263244;
     font-size: 20px;
     font-weight: bold;
-
 }
+
 .section_3 select {
     margin: 0 0 35px 600px;
     width: 693px;
@@ -249,12 +511,14 @@ nav {
     color: #263244;
     font-size: 16px;
 }
+
 .cherta {
     background: #d1d1d1;
     width: 693px;
     height: 2px;
     margin: 0 0 23px 600px;
 }
+
 .term_cost p {
     margin: 0 0 24px 600px;
     width: 693px;
@@ -262,11 +526,30 @@ nav {
     font-size: 15px;
     font-weight: 700;
 }
+
 .section_4 {
-    background: url(../img/fon_2.png);
+    background: url(../img/fon_2.png) 0 0 no-repeat fixed;
     height: 499px;
     margin: 154px 0 0 0;
 }
+
+.section_4 img:hover {
+    -webkit-animation: rot 500ms linear 0s 1;
+    -o-animation: rot 500ms linear 0s 1;
+    animation: rot 500ms linear 0s 1;
+
+}
+
+@keyframes rot {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
 .section_4 h2 {
     font-size: 24px;
     text-transform: uppercase;
@@ -275,40 +558,48 @@ nav {
     padding: 105px 0 28px 0;
     font-weight: bold;
 }
+
 .section_4 .cherta_zagalovka {
     padding: 0 0 86px 0;
 }
+
 .clients {
     display: inline-block;
     margin: 0 160px 0 439px;
     text-align: center;
 }
+
+
 .time {
     display: inline-block;
     margin: 0 155px 0 0;
     text-align: center;
 }
+
 .projects {
     display: inline-block;
     margin: 0 155px 0 0;
     text-align: center;
 }
+
 .prize {
     display: inline-block;
     text-align: center;
 }
+
 .chapter_section_4 {
     color: #323e4f;
     font-size: 28px;
     font-weight: 900;
     padding: 35px 0 35px 0;
-
 }
+
 .text_section_4 {
     text-transform: uppercase;
     font-weight: 600;
     color: #323e4f;
 }
+
 .section_5 h2 {
     font-size: 24px;
     text-transform: uppercase;
@@ -317,12 +608,15 @@ nav {
     padding: 105px 0 28px 0;
     font-weight: bold;
 }
+
 .section_5 .cherta_zagalovka {
     padding: 0 0 55px 0;
 }
+
 .comment_1 img {
     margin: 0 0 36px 900px;
 }
+
 .text_comment {
     text-align: center;
     width: 690px;
@@ -330,19 +624,23 @@ nav {
     color: #3f495a;
     font-size: 14px;
 }
+
 .name_comment {
     text-align: center;
     color: #3f495a;
     font-size: 14px;
     margin: 0 0 150px 0;
 }
+
 .name_comment span {
     font-weight: bold;
     color: #3f495a;
 }
+
 .my_contacts {
     background: url(../img/fon_3.png);
 }
+
 .my_contacts h2 {
     font-size: 24px;
     text-transform: uppercase;
@@ -351,46 +649,57 @@ nav {
     padding: 105px 0 32px 0;
     font-weight: bold;
 }
+
 .my_contacts .cherta_zagalovka {
     padding: 0 0 32px 0;
 }
+
 .text_contacts {
     color: #fff;
     text-align: center;
     margin: 0 0 45px 0;
 }
+
 .geo {
     display: inline-block;
     text-align: center;
     color: #fff;
     margin: 0 103px 39px 630px;
 }
+
 .geo img {
     margin: 0 0 13px 0;
 }
+
 .convert {
     display: inline-block;
     text-align: center;
     color: #fff;
     margin: 0 103px 39px 0;
 }
+
 .convert img {
     margin: 0 0 13px 0;
 }
+
 .convert a {
     color: #fff;
 }
+
 .truba {
     display: inline-block;
     text-align: center;
     color: #fff;
 }
+
 .truba img {
     margin: 0 0 13px 0;
 }
+
 .truba a {
     color: #fff;
 }
+
 .message {
     text-align: center;
     color: #fff;
@@ -399,7 +708,8 @@ nav {
     text-transform: uppercase;
     margin-bottom: 46px;
 }
-.name{
+
+.name {
     margin: 0 30px 0 595px;
     height: 33px;
     width: 350px;
@@ -407,12 +717,14 @@ nav {
     padding: 0 0 0 13px;
     background-color: #d2d6dc;
 }
-.email{
+
+.email {
     height: 33px;
     width: 350px;
     padding: 0 0 0 13px;
     background-color: #d2d6dc;
 }
+
 textarea {
     margin: 12px 0 28px 595px;
     width: 733px;
@@ -432,18 +744,22 @@ textarea {
     border-radius: 5px;
     font-size: 15px;
 }
+
 .icon {
     padding: 0 0 67px 753px;
 }
+
 .icon img {
     padding-right: 50px
 }
+
 .map {
     background-color: #c9dfc0;
     height: 350px;
     text-align: center;
     line-height: 350px;
 }
+
 .copyright {
     height: 96px;
     background: #354051;
@@ -451,33 +767,3 @@ textarea {
     color: #fff;
     line-height: 96px;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
